# pico_tinyusb_audiomidi

./: CMakeLists.txt  README.md  makeScript.sh
pico_tinyusb_audiomidi.xcworkspace/: contents.xcworkspacedata
pico_tinyusb_audiomidi.xcworkspace/xcuserdata/markdavid_laptop.xcuserdatad/: UserInterfaceState.xcuserstate
pico_tinyusb_audiomidi.xcworkspace/xcuserdata/markdavid_laptop.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/: CMakeLists.txt  main.c
src/usb/: tusb_config.h  usb_audio_midi.h  usb_descriptors.c
